fix sticky header misalign

--- a/frontend/src/app/page.module.sass
+++ b/frontend/src/app/page.module.sass
@@ -102,9 +102,10 @@
     display: flex
     flex-direction: column
     gap: var(--space-titlemeta-gap)
-    padding: 0 var(--space-sides-general)
+    padding: 16px var(--space-sides-general)
     position: sticky
-    top: 0
+    // 16px for header, 32px for padding
+    top: calc(32px + 16px)
     background: var(--color-app)
     z-index: calc(var(--index-slidepanel) + 1)
   &_Meta
